fix(top-navigation): remove min-height from .menu-toggle
This caused the "New" pill on the Tools menu to show up too high.

--- a/client/src/ui/organisms/top-navigation-main/index.scss
+++ b/client/src/ui/organisms/top-navigation-main/index.scss
@@ -81,7 +81,6 @@
     }
 
     &.menu-toggle {
-      min-height: 53px;
       padding: 0.5rem;
     }
 
